--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,6 @@
 {
   "image": "mcr.microsoft.com/devcontainers/base:alpine",
   "features": {
-    "ghcr.io/devcontainers/features/rust:1": {
-      "version":"latest"
-    }
+    "ghcr.io/devcontainers/features/rust:1": {}
   }
 }
